[project]
name = "azpmp-yearly"
version = "0.1.0"
description = "generate figures for az pmp yearly report"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipython>=9.0.2",
    "kaleido==0.2.0",
    "numpy>=2.2.3",
    "plotly>=6.0.0",
    "polars>=1.24.0",
    "requests>=2.32.3",
    "tableauserverclient>=0.36",
]

[tool.ruff.format]
quote-style = 'preserve'
indent-style = 'space'

[tool.basedpyright]
typeCheckingMode = 'standard'
